# Omarchy

./: pyproject.toml
laboratorio/: main.py
laboratorio/test_lab/: main.py
src/: database.py  despesas.db  if_else.py  main.py  modelo_1.py  modelo_2.py  projeto_1.py  pyrightconfig.json  type_hits.py
src/DESPESAS/: app.py  graficos.py  pyproject.toml
src/Eng_Eletrica/: automacao.py
src/Eng_Eletrica/Ideias/: ideia_1.md
src/Projetos/: projeto_1.py
