[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
ignore = []
include = []
exclude = ["**/.venv"]
venvPath = "."
executionEnvironments = [{ root = "." }]
